<resources>
    <string name="app_name">ViBaCar</string>
    <string name="nom_marca">ViBaCar</string>
    <string name="selecciona_idioma">Idioma</string>
    <string name="boto_enrere">Torna enrere</string>
    <string name="boto_tancar_sessio">Tanca la sessi&#243;</string>
    <string name="boto_enviar">Envia</string>
    <string name="icona_correu">@"</string>
    <string name="benvinguda_titol">Comparteix cotxe amb gent del Vidal</string>
    <string name="benvinguda_subtitol">Arriba al Vidal compartint cam&#237;.</string>
    <string name="benvinguda_ilustracio">Troba places properes, reserva i parla pel xat intern.</string>
    <string name="filtre_propers">Propers</string>
    <string name="filtre_tots">Tots</string>
    <string name="filtre_seguits">Seguits</string>
    <string name="cerca_places_hint">Places m&#237;n.</string>
    <string name="boto_filtres">Filtres</string>
    <string name="boto_seguir_usuari">Seguir usuari</string>
    <string name="boto_seguidor_actiu">Seguint</string>
    <string name="boto_veure_trajectes_usuari">Veure trajectes publicats</string>
    <string name="text_correu_verificat">correu verificat</string>
    <string name="text_correu_pendent">correu pendent de verificar</string>
    <string name="boto_crear_compte_gratis">Crear compte</string>
    <string name="boto_buscar_viatge">Buscar viatge</string>
    <string name="ja_tinc_compte">Ja tinc compte</string>
    <string name="inici_titol">Inici de sessi&#243;</string>
    <string name="inici_subtitol">Entra amb el correu del centre per veure viatges i parlar amb conductors.</string>
    <string name="etiqueta_correu">Correu del centre</string>
    <string name="etiqueta_contrasenya">Contrasenya</string>
    <string name="boto_iniciar_sessio">Iniciar sessi&#243;</string>
    <string name="boto_he_oblidat">He oblidat la contrasenya</string>
    <string name="recupera_titol">Recuperar contrasenya</string>
    <string name="recupera_subtitol">Confirma el correu i t\'enviarem un enlla&#231; segur per canviar la contrasenya.</string>
    <string name="boto_envia_recuperacio">Enviar enlla&#231; de recuperaci&#243;</string>
    <string name="etiqueta_repeteix_correu">Repeteix el correu</string>
    <string name="error_correus_diferents">Els correus no coincideixen</string>
    <string name="no_tens_compte">Encara no tens compte</string>
    <string name="registre_titol">Crear compte</string>
    <string name="registre_subtitol">Primer creem el compte i tot seguit acabem el teu perfil.</string>
    <string name="etiqueta_nom">Nom complet</string>
    <string name="etiqueta_repeteix_contrasenya">Repeteix la contrasenya</string>
    <string name="etiqueta_contrasenya_actual">Contrasenya actual</string>
    <string name="etiqueta_repeteix_contrasenya_actual">Repeteix la contrasenya actual</string>
    <string name="registre_info_domini">Nom&#233;s acceptem correus amb domini vidalibarraquer.net</string>
    <string name="boto_continua_perfil">Continua amb el perfil</string>
    <string name="perfil_config_titol">Configura el teu perfil</string>
    <string name="perfil_config_subtitol">Crea un perfil identificable: pots afegir una foto i una bio breu.</string>
    <string name="boto_tria_foto">Tria foto de perfil</string>
    <string name="titol_dades_vehicle">Vehicle per publicar trajectes</string>
    <string name="etiqueta_model_cotxe">Model del cotxe</string>
    <string name="etiqueta_bio">Biografia breu</string>
    <string name="boto_desar_perfil">Desar perfil</string>
    <string name="verifica_titol">Verifica el correu</string>
    <string name="text_info_verificacio_format">Hem enviat un correu de verificaci&#243; a %1$s. Revisa la safata d\'entrada i torna aqu&#237; quan el validis.</string>
    <string name="boto_reenviar_verificacio">Reenviar verificaci&#243;</string>
    <string name="boto_ja_he_verificat">Ja he verificat el correu</string>
    <string name="tab_passatger">Passatger</string>
    <string name="tab_conductor">Conductor</string>
    <string name="boto_crear_viatge">Crear viatge</string>
    <string name="boto_acceptar_reserva">Acceptar</string>
    <string name="boto_rebutjar_reserva">Rebutjar</string>
    <string name="boto_cancelar_reserva">Cancel&#183;lar</string>
    <string name="passatger_titol">Busco viatge</string>
    <string name="passatger_subtitol">Mira tots els trajectes publicats o prioritza els m&#233;s propers al teu municipi.</string>
    <string name="passatger_llista_titol">Trajectes publicats</string>
    <string name="passatger_buit">Ara mateix no hi ha cap viatge que coincideixi amb la cerca.</string>
    <string name="conductor_titol">Publico viatge</string>
    <string name="conductor_subtitol">Revisa els teus trajectes i crea noves places quan et vagi b&#233;.</string>
    <string name="conductor_llista_titol">Trajectes publicats per tu</string>
    <string name="conductor_sense_valoracions">Sense valoracions encara</string>
    <string name="conductor_buit">Encara no has publicat cap viatge.</string>
    <string name="conductor_resum_publicats_format">%1$d publicats</string>
    <string name="conductor_resum_publicats_buit">0</string>
    <string name="conductor_resum_viatges_format">%1$d viatges actius</string>
    <string name="conductor_resum_viatges_buit">Sense viatges actius</string>
    <string name="conductor_resum_sollicituds_format">%1$d sol&#183;licituds pendents</string>
    <string name="conductor_resum_sollicituds_buit">0</string>
    <string name="conductor_titol_publicats">Viatges actius</string>
    <string name="conductor_titol_sollicituds">Sol&#183;licituds</string>
    <string name="conductor_sense_sollicituds_pendents">No hi ha sol&#183;licituds pendents</string>
    <string name="sollicituds_titol">Sol&#183;licituds pendents</string>
    <string name="sollicituds_subtitol">Revisa qui demana pla&#231;a i decideix si acceptes o rebutges la reserva.</string>
    <string name="text_mapa_resum">Ruta i punt de trobada</string>
    <string name="text_mapa_sense_dades">Quan escriguis origen i dest&#237;, aqu&#237; veur&#224;s la ruta acordada.</string>
    <string name="detall_perque_titol">Per qu&#232; viatjar amb aquesta persona</string>
    <string name="qualitat_puntual">Puntual</string>
    <string name="qualitat_bon_ambient">Bon ambient</string>
    <string name="qualitat_fiable">Fiable</string>
    <string name="boto_reservar_placa">Reservar pla&#231;a</string>
    <string name="boto_obrir_xat">Obrir xat</string>
    <string name="boto_veure_perfil">Veure perfil</string>
    <string name="boto_xat_bloquejat">Xat bloquejat fins a una reserva acceptada</string>
    <string name="mapa_inici">Punt de sortida</string>
    <string name="mapa_desti">Punt d\'arribada</string>
    <string name="crear_viatge_titol">Publicar un viatge</string>
    <string name="etiqueta_sentit_trajecte">Sentit del trajecte</string>
    <string name="sentit_cap_institut">Cap a l\'institut</string>
    <string name="sentit_tornada_casa">Tornada de l\'institut cap a casa</string>
    <string name="etiqueta_origen">Origen</string>
    <string name="etiqueta_desti">Dest&#237;</string>
    <string name="desti_per_defecte">Institut Vidal i Barraquer</string>
    <string name="etiqueta_data">Data</string>
    <string name="etiqueta_hora_sortida">Hora sortida</string>
    <string name="etiqueta_hora_arribada">Hora arribada</string>
    <string name="crear_viatge_hora_arribada_auto">Hora d\'arribada calculada</string>
    <string name="crear_viatge_arribada_estimacio_pendent">L\'arribada estimada apareixerà quan hi hagi ruta i hora de sortida.</string>
    <string name="crear_viatge_arribada_estimacio_format">Arribada estimada: %1$s</string>
    <string name="etiqueta_places">Places</string>
    <string name="etiqueta_aportacio">Preu</string>
    <string name="etiqueta_preu">Preu</string>
    <string name="etiqueta_preu_sufix">EUR</string>
    <string name="crear_viatge_pas_ruta">1. D\'on surts i on vas</string>
    <string name="crear_viatge_pas_sentit">1. Sentit</string>
    <string name="crear_viatge_pas_quan">2. Quan surts</string>
    <string name="crear_viatge_pas_places">3. Places i preu</string>
    <string name="crear_viatge_ruta_pendent">Escriu origen i dest&#237; per veure la ruta</string>
    <string name="crear_viatge_arribada_estimada_format">Arribada estimada: %1$s (%2$d min)</string>
    <string name="crear_viatge_arribada_estimada_pendent">Arribada estimada: pendent (%1$d min)</string>
    <string name="error_falta_model_cotxe">Indica el model del cotxe abans de publicar.</string>
    <string name="error_preu_buit">Posa un preu v&#224;lid</string>
    <string name="etiqueta_observacions">Observacions</string>
    <string name="boto_publicar_viatge">Publicar viatge</string>
    <string name="perfil_titol">El meu perfil</string>
    <string name="boto_editar_perfil">Editar perfil</string>
    <string name="boto_veure_perfil_public">Veure el meu perfil</string>
    <string name="perfil_sobre_mi">Sobre mi</string>
    <string name="perfil_comentaris">Comentaris</string>
    <string name="perfil_comentaris_titol">Comentaris i valoracions</string>
    <string name="perfil_comentaris_buit">Encara no hi ha comentaris per aquest usuari</string>
    <string name="text_total_valoracions_format">(%1$d)</string>
    <string name="perfil_bio_format">Bio: %1$s</string>
    <string name="perfil_model_format">Model: %1$s</string>
    <string name="perfil_proxims">Pr&#242;xims</string>
    <string name="perfil_passats">Passats</string>
    <string name="perfil_cap_element">No hi ha cap element per mostrar.</string>
    <string name="xat_hint">Escriu un missatge</string>
    <string name="bustia_titol">Els meus xats</string>
    <string name="bustia_buit">Encara no tens xats. S\'obriran quan alg&#250; accepti una reserva.</string>
    <string name="boto_bustia_xats">B&#250;stia de xats</string>
    <string name="xat_sense_missatges">Sense missatges encara</string>
    <string name="xat_darrer_missatge_meu_format">Tu: %1$s</string>
    <string name="boto_puntuar">Puntuar</string>
    <string name="dialog_puntuacio_titol">Puntua el viatge</string>
    <string name="dialog_puntuacio_subtitol">Marca de 1 a 5 estrelles com ha anat el trajecte.</string>
    <string name="text_valoracio_format">%1$.1f &#9733; (%2$d)</string>
    <string name="text_ruta_format">%1$s &#8594; %2$s</string>
    <string name="text_horari_viatge_format">%1$s | %2$s - %3$s</string>
    <string name="text_reserva_subtitol_format">%1$s | amb %2$s</string>
    <string name="text_usuari">Usuari</string>
    <string name="text_places_format">Places lliures: %1$d</string>
    <string name="text_info_detall_format">%1$s | %2$s - %3$s | %4$s places</string>
    <string name="text_model_cotxe_format">Cotxe: %1$s</string>
    <string name="notificacions_titol">Notificacions</string>
    <string name="notificacions_buit">No tens cap notificaci&#243;</string>
    <string name="notificacions_marcar_totes">Marcar totes</string>
    <string name="notificacions_seleccionar_totes">Seleccionar totes</string>
    <string name="notificacions_marcar_llegides">Marcar llegides</string>
    <string name="notificacions_marcar_no_llegides">Marcar no llegides</string>
    <string name="notificacions_eliminar">Eliminar</string>
    <string name="notificacions_cancelar">Cancel&#183;lar</string>
    <string name="cerca_desti_hint">A on vas (opcional)</string>
    <string name="cerca_data_hint">Data del viatge</string>
    <string name="filtre_dir_totes">Ambd&#243;s</string>
    <string name="filtre_dir_insti">Cap a l\'Institut</string>
    <string name="filtre_dir_tornada">Tornada a Casa</string>
    <string name="filtres_titol">Filtres de cerca</string>
    <string name="filtres_mode_label">Com vols cercar?</string>
    <string name="filtres_dir_label">Direcci&#243; del viatge</string>
    <string name="boto_aplica_filtres">Aplica filtres</string>
</resources>